# rust_rabbitmq

./: .env  Cargo.toml  README.md
migrations/2024-01-27-001835_create_alunos_table/: down.sql  up.sql
migrations/2024-01-30-025136_students/: up.sql
src/: main.rs  mod.rs  schema.rs
src/configs/: db_config.rs
src/db_schemas/: alunos_schema.rs  mod.rs
src/entities/: mod.rs  student_entity.rs
src/models/: aluno_model.rs  mod.rs  student_model.rs
src/rabbitmq/: config.rs  consumer.rs  publisher.rs
src/service/: mod.rs
src/service/aluno/: aluno.rs  mod.rs
src/service/aula/: aula.rs  mod.rs
src/service/turma/: turma.rs
src/services/: mod.rs
src/services/aluno/: aluno.rs
src/services/classies/: classies.rs  mod.rs
src/services/classroom/: classroom.rs
src/services/student/: student.rs
src/services/turma/: mod.rs  turma.rs
src/traits/: load_query_impl.rs  mod.rs
