[package]
name = "aluno-aula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
amiquip = { version = "0.4", default-features = false }
dotenv = "0.15.0"
rabbitmq-stream-client = "*"
