[package]
name = "rust-rabbitmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_migrations = "2.1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
amiquip = { version = "0.4", default-features = false }
dotenv = "0.15.0"
rusqlite = "0.30.0"

# sqlx = { version = "=0.7.0", features = ["sqlite"] }
